# TextractSSMLProcessor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MP3 to Audiobook Converter.ipynb  On_Faith_SSML_chunk_1.txt  README.md  SSML Debugging Tools.ipynb  app.log.10  config.py  pyproject.toml  requirements.txt  run.py
TEST_PAD_OUTPUT_FOLDER/: chunk_1.txt
chunks/: On_Faith_SSML_chunk_2.txt  On_Faith_SSML_chunk_3.txt  SAMPLE_SSML_chunk_1.txt  Test_Pad_SSML_chunk_1.txt  This_We_Believe_SSML_chunk_1.txt
latin/: latin_processed_Little_Book_On_Emendation_Latin_part_1.txt  latin_processed_Little_Book_On_Emendation_Latin_part_2.txt  latin_processed_Little_Book_On_Emendation_Latin_part_3.txt  latin_processed_SANCTI_EUCHERII_LUGDUNENSIS_EPISCOPI_EXHORTATIO_AD_MONACHOS__html_part_1.txt
output_files/: part_00.txt  part_01.txt  part_02.txt  part_03.txt  part_04.txt  part_05.txt  part_06.txt  part_07.txt  part_08.txt  part_09.txt  part_10.txt  part_11.txt  part_12.txt  part_13.txt  part_14.txt  part_15.txt  part_16.txt  part_17.txt  part_18.txt  part_19.txt  part_20.txt  part_21.txt  part_22.txt  part_23.txt  part_24.txt  part_25.txt  part_26.txt  part_27.txt  part_28.txt  part_29.txt  part_30.txt  part_31.txt  part_32.txt  part_33.txt  part_34.txt  part_35.txt  part_36.txt  part_37.txt  part_38.txt  part_39.txt  (+9 more)
pipeline_support/: audio_processing.py  file_processing.py  ssml_processing.py  ssml_validator.py  text_processing.py
processed/: On_Faith_SSML  SAMPLE_SSML  Test_Pad_SSML
processed_files/: ARCHIEPISCOPUS_REMENSIS_01.txt  NOTITIA_brsmallex_Gallandiosmallbr_02.txt  (+5 more)
(+25 files in other folders)
